adding a comment explaning why method 2 in task 1 is wrong

--- a/soccer_visualization/soccer_dataviz.ipynb
+++ b/soccer_visualization/soccer_dataviz.ipynb
@@ -727,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Potential problem with this one. The total_score might be incorrect, as away_score doesn't seem to make sense in a groupby here. Method 1 might be the only correct one. Need sanity check for a single country."
+    "Potential problem with this one. The total_score might be incorrect, as away_score doesn't seem to make sense in a groupby here. The away_score shown when doing a group by home_team, as done here, is actually the number of goals scored against the team, not the scores made by the team as an away team"
    ]
   },
   {
